--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">KoinKtor</string>
+
+    <string name="no_internet_connection_exception_message">No Internet Connection</string>
+
+    <string name="no_internet_connection_popup_icon_content_description">Popup Icon</string>
+    <string name="no_internet_connection_popup_title">Information</string>
+    <string name="no_internet_connection_popup_message">No Internet Connection</string>
+    <string name="no_internet_connection_neutral_button_text">OK</string>
+
 </resources>
